force-app/main/default/objects/SR_Workflow_Task_Distribution__c/SR_Workflow_Task_Distribution__c.object-meta.xml
<CustomObject>
    <description>This object describes the Workflow and Task Distribution detail.</description>
    <label>SR Workflow Task Distribution</label>
    <nameField>
        <displayFormat>WTD-{000000}</displayFormat>
        <label>Distribution ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>