force-app/main/default/objects/SR_Workflow_Task_Distribution__c/fields/Task_Code__c.field-meta.xml
<CustomField>
    <fullName>Task_Code__c</fullName>
    <label>Task Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>