force-app/main/default/objects/SR_Workflow_Task_Distribution__c/fields/Task_Resolver__c.field-meta.xml
<CustomField>
    <fullName>Task_Resolver__c</fullName>
    <label>Task Resolver</label>
    <length>80</length>
    <type>Text</type>
</CustomField>