force-app/main/default/objects/SR_Workflow_Task_Distribution__c/fields/Workflow_Code__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Workflow Code from Workflow Definition</description>
    <label>Workflow Code</label>
    <referenceTo>SR_Workflow_Definition__c</referenceTo>
    <relationshipLabel>Task Distributions</relationshipLabel>
    <relationshipName>Task_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>